--- a/.pages.yml
+++ b/.pages.yml
@@ -3,8 +3,8 @@ backend:
   name: git-gateway
   branch: main
 
-media_folder: "assets/images/uploads"
-public_folder: "/assets/images/uploads"
+media_folder: "assets/images"
+public_folder: "/assets/images"
 
 site_url: "https://ukfrs-cddfrs.github.io/beta-public-website/
 
