deploy: ukfrs-CDDFRS/site_backend_code@c8efd6ef02505452e9c3353f4b965f3aab778192

--- a/pages-cms.yml
+++ b/pages-cms.yml
@@ -3,8 +3,8 @@ backend:
   name: git-gateway
   branch: main
 
-media_folder: "assets/images"
-public_folder: "/assets/images"
+media_folder: "assets/images/uploads"
+public_folder: "/assets/images/uploads"
 
 site_url: "https://ukfrs-cddfrs.github.io/beta-public-website/
 
