deploy: ukfrs-CDDFRS/site_backend_code@b2f85080746125da88d84eea110a1dbe8dbb6e09

--- a/.pages.yml
+++ b/.pages.yml
@@ -83,15 +83,19 @@ content:
     path: src/data/redirects.json
     type: file
     fields:
-      - name: short
-        label: Short
-        type: string
-      - name: long
-        label: Long
-        type: string
-      - name: path
-        label: Path
-        type: string
+      - name: redirects
+        label: Redirect List
+        type: list
+        fields:
+          - name: short
+            label: Short
+            type: string
+          - name: long
+            label: Long
+            type: string
+          - name: path
+            label: Path
+            type: string
   - name: navigation
     label: Navigation
     path: src/data/navigation.json
