--- a/.pages.yml
+++ b/.pages.yml
@@ -83,9 +83,7 @@ content:
     path: src/data/redirects.json
     type: file
     fields:
-      - name: redirects
-        label: Redirect List
-        type: list
+      - type: list
         fields:
           - name: short
             label: Short
