deploy: ukfrs-CDDFRS/site_backend_code@e5f07bc8c9b79b7288aad54ae0f3d676371824e8

--- a/.pages.yml
+++ b/.pages.yml
@@ -130,5 +130,5 @@ content:
             label: URL
             type: string
 media:
-  input: public/media
+  input: src/assets/images
   output: /media
